fixed bug in scrolling - horizontal scroll using mouse wheel now works correctly

--- a/Wikipedia/Wikipedia/css/default.css
+++ b/Wikipedia/Wikipedia/css/default.css
@@ -114,7 +114,7 @@ a:visited {
 }
 
 div#article {
-    overflow: scroll;
+    overflow: auto;
     -ms-user-select: text;
     cursor: text;
 }
